# bitch-stewie

./: .gitignore  CLAUDE.md  Makefile  PLAN.md  README.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  cc-setup.sh  pyproject.toml
backend/.claude/: statusline.sh
backend/.claude/agents/: architect.md  code-delegate.md  doc-writer.md  researcher.md
backend/.claude/managed-settings/: architecture-doc.json
backend/.claude/output-styles/: architecture-doc.md
backend/.claude/workflows/: big-delegation.js
backend/migrations/: env.py
backend/migrations/versions/: ab09f49c0c04_initial_memory_schema.py  b71e0a3d0001_add_examples_table.py
backend/skills/delegate/delegate-coding-task/: SKILL.md
backend/skills/orchestrator/architecture-decision/: SKILL.md
backend/skills/orchestrator/delegate-coding-task/: SKILL.md
backend/skills/orchestrator/diagram-update/: SKILL.md
backend/skills/orchestrator/doc-deliverable/: SKILL.md
backend/skills/orchestrator/plan-improvement/: SKILL.md
backend/skills/orchestrator/research-brief/: SKILL.md
backend/skills/planner/coding-plan/: SKILL.md
backend/skills/planner/design-plan/: SKILL.md
backend/skills/planner/research-plan/: SKILL.md
backend/src/assistant/: config.py
backend/src/assistant/api/: app.py  chat.py  diagrams.py  examples.py  knowledge.py  plan.py  research.py  routers.py  stats.py  statusline.py  util.py
backend/src/assistant/cc_bridge/: brief.py  lifecycle_hooks.py  memory_mcp.py  runner.py  (+2 more)
backend/tests/: conftest.py  test_api.py  test_health.py  test_persistence.py  test_rag.py
(+66 files in other folders)
