[project]
name = "assistant"
version = "0.1.0"
description = "Personal AI project assistant - orchestration layer over Claude Code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # LangChain ecosystem (1.0 LTS)
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langgraph>=1.0,<2.0",
    "deepagents",
    "langsmith>=0.3.0",
    "langchain-ollama",
    "langchain-qdrant",
    "langchain-text-splitters",
    "langgraph-checkpoint-postgres",
    # Claude Code bridge
    "claude-agent-sdk",
    # API
    "fastapi",
    "uvicorn[standard]",
    "sse-starlette",
    "httpx",
    # Persistence
    "sqlalchemy[asyncio]>=2.0",
    "alembic",
    "psycopg[binary,pool]",
    "qdrant-client",
    # Jobs
    "procrastinate[psycopg]",
    "apscheduler>=3.10",
    "watchfiles",
    # CLI + config
    "typer",
    "rich",
    "pydantic-settings",
    "fastembed>=0.8.0",
]

[project.scripts]
assistant = "assistant.cli.main:app"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/assistant"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
